k8s/overlays/staging/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foreningsregister-frontend
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: frontend
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
